2009-04-05  ARAKI Yasuhiro  <ar@debian.org>

	* app/helpers/application_helper.rb (ApplicationHelper#display_categories_roots_description): New method.
	(ApplicationHelper#display_categories_roots_description_sub): New method.

	* app/controllers/notes_controller.rb (NotesController): Change to show 10 articles at once. (Change from 30 to 10.)

2008-12-31  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/article_sweeper.rb: Small fix.

2008-12-29  ARAKI Yasuhiro  <ar@debian.org>

	* Re-enable to observe models in app/models/article_sweeper.
	* Change URL for noteslist pages. (map.connect "archives/listpages/page/:page").
	* Change(Expand) trackback_enable_time (10years to 20years) in test/fixtures/don_envs.yml (first).

2008-12-26  ARAKI Yasuhiro  <ar@debian.org>

	* Change "render :template =>.." to "render :file =>.." for applying rails 2.2.2.

2008-12-25  ARAKI Yasuhiro  <ar@debian.org>

	* Change article order at showing category and subcategories. Now shows reverse id.

2008-12-24  ARAKI Yasuhiro  <ar@debian.org>

	* Change to include sub categories at viewing.
	* Add rss link image.

2008-12-22  ARAKI Yasuhiro  <ar@debian.org>

	* This version is running with rails2.2.2. (checked by rake test). However, following feature is disabled.
	- cache expiring test.
	- spam filter by antispam.rb for model/comment.rb. (Akismet bloking is alive.)

2008-12-19  ARAKI Yasuhiro  <ar@debian.org>

	* This version is running with rails2.1.2. (checked by rake test).

2008-08-29  ARAKI Yasuhiro  <ar@debian.org>

	* app/views/admin/shared/edit_don_env.rhtml (baseurl): Change to split "mandatory" and "optional" parameters.

	* app/helpers/application_helper.rb (ApplicationHelper#don_get_oldconfig): Fix for first "rake db:migrate".

2008-06-20  ARAKI Yasuhiro  <ar@debian.org>

	* config/initializers/fix_multibyte_chars_respond_to.rb: Add new file for run with rails2.0.2 + ruby1.8.7. Thanks ay!
	* config/initializers/remove_string_chars.rb: likewise.
